@startuml MHS
title Marwaan's Hotel System
top to bottom direction
skinparam linetype ortho

package MHS <<Rectangle>> {
    together {

        abstract Class Account <<abstract>>{
            firstName
            lastName
            email
            password
            phoneNumber
        }

        Class StaffAccount {
            void editBooking()
        }

        Account <|-down- StaffAccount
        Account <|-down- Customer

        Class Manager {
            void setOpeningHour()
            void setClosingHour()
            void createRoom()
            void changeRoom()
            void createShift()
            void modifyShift()
            void hireEmployee()
            void fireEmployee()
        }

        Class Employee {
            type : EmployeeType
        }

        Class Customer {
            + points
            bookingHistory
        }
    }
    Class Guest {
        firstName
        lastName
    }

    together {

        Class Room {
            isAvailable : boolean
            type : RoomType
            bed : BedType
            pricePerNight
        }

        Class Booking {
            # bookingId
            numberOfGuest
            checkinDate
            checkoutDate
        }
        note right of Booking
            The stay of the customer
        end note

        Class Request {
            isCompleted : boolean
            customerName
            room : Room
            description : string
        }
    }


    Class Hotel {
        openingHour
        closingHour
    }

    Class Payment {
        amount
        id
    }

    Class Shift {
        date
        startTime
        endTime
    }

    Class Schedule

    ' Manager --> Room
    ' Manager --> Hotel

    Manager -left-> Employee
    StaffAccount --> Request

    Employee --> Shift

    Manager --> Shift

    Booking --> Payment
    Booking --> Request

    Room -up- Customer
    (Customer, Room) .. Booking

    Guest -down- Room
    (Guest, Room) ... Booking
    Shift -right-* Schedule
    StaffAccount <|-down- Manager
    StaffAccount <|-down- Employee
    enum RoomType <<enum>> {
        Suite
        Deluxe
        Luxury
        Regular
    }

    enum BedType <<enum>> {
        King
        Queen
        Doubles
    }

    enum EmployeeType <<enum>> {
        KitchenStaff
        CleaningStaff
        Reception
    }

    note right of EmployeeType
        We can add more jobs
    end note

    note left of BedType::Doubles
    2 double-sized beds
    end note
}
@enduml